# fan-bd

./: .gitignore  Cargo.toml  readme.md
ocrpy/: ocr_server.py  run.sh
src/: lib.rs  main.rs
src/core/: capturer.rs  core.rs  error.rs  mod.rs
src/engine/: blackdesert.rs  error.rs  item_fetcher.rs  mod.rs
src/ocr/: mod.rs  ocr.rs
