[package]
edition = "2024"
exclude = ["dump", "ocrpy"]
name = "fan-bd"
repository = "https://github.com/akbarfa49/fan-bd"
version = "0.1.0"
[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = "0.4.41"
crossterm = "0.29.0"
derive_more = { version = "2.0.1", features = ["from"] }
futures-util = "0.3.31"
image = "0.25.6"
imageproc = "0.25.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["multipart", "json", "stream"] }
scap = { git = "https://github.com/akbarfa49/scap.git", tag = "v0.0.9" }
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
# trait-variant = "0.1.2"
triple_accel = "0.4.0"
unicode-normalization = "0.1.24"
use = "0.0.1-pre.0"
